# nix-shell

./: README.md  flake.nix
android/: .zcompdump  .zshrc  Makefile  README.md  default.nix  flake.nix  shell-with-emulator.nix  shell.nix
devbox/: devbox.json
fastai/: shell.nix
ffmpeg/: shell.nix
flake_miredo/: README.md  flake.nix
flake_xray/: README.md  flake.nix  spoofdpi.nix
gcc/: shell.nix
golang/: shell.nix
incremental_build/dump/: Dockerfile  Makefile.template  docker-compose.yml
incremental_build/opencv4/: .gitignore  1.stage.shell.nix  2.stage.shell.nix  Makefile  README.md  default.nix  shell.nix
incremental_build/opencv4/sample/: sample.py
incremetal_build/dump/shell2/: default.nix
incremetal_build/opencv4/: README.md
incremetal_build/opencv4/sample/: Makefile
jupyter/: shell.nix
net-tools/: shell.nix
net-tools/libparistraceroute/: Makefile  default.nix  libparistraceroute.nix
overlay/: README.md  overlays.nix  shell.nix
overlay/go/: 1.21.nix
overlay/refind/: default.nix
packing_test/opencv4_try2/: Makefile  README.md  shell.nix
python/flake/: .zshrc  Makefile  flake.nix  pyproject.toml
python/nerfstudio/: README.md  shell.nix
python/simple/: shell.nix
radare2/: main  shell.nix
rustc/: Makefile  flake.nix
vue/: README.md  shell.nix
wine/: shell.nix
yarn/: shell.nix
